# rust-tenacious

./: Cargo.toml  README.md
src/: lib.rs
tests/: compiletest.rs
tests/compile-fail/: no-move-struct-variant.rs  no_move.rs
tests/run-pass/: allow-move.rs  move-box.rs
