[package]

name = "tenacious"
version = "0.0.7"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
description = "A plugin to prevent certain types from being moved"
repository = "https://github.com/Manishearth/rust-tenacious"
readme = "README.md"
license = "MPL-2.0"
keywords = ["tenacious", "move", "plugin"]

[lib]
name = "tenacious"
plugin = true

[dev-dependencies]
compiletest_rs = "*"

[features]

rvalue_checks = []